--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,8 +25,9 @@
             <th scope="col">Delete</th>
           </tr>
         </thead>
+        {% for posts in post  %}
         <tbody>
-            {% for posts in post  %}
+            
           <tr>
             <th scope="row">{{posts.id}}</th>
             <td>{{posts.name}}</td>
@@ -39,11 +40,12 @@
             </td>
             <td>
               <a href="/edit/{{posts.id}}">
-                <i class="fa fa-edit" style="font-size: 18px;color: rgb(16, 13, 247);"></i>
+                <i class="fa fa-edit" style="font-size: 18px;color: hsl(241, 83%, 49%);"></i>
 
               </a>
             </td>
-          </tr>{%  endfor  %}
+          </tr>
+          {%  endfor  %}
          
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
